--- a/package.json
+++ b/package.json
@@ -1,22 +1,19 @@
 {
   "type": "module",
-  "name": "react-observable",
+  "name": "react-observable-hooks",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "start": "tsx index.ts"
   },
   "keywords": [],
-  "author": "",
+  "author": "Ariel Batista <arielbatista_7@hotmail.com>",
   "license": "ISC",
   "description": "",
   "peerDependencies": {
     "react": ">= ^17.0.0"
   },
   "devDependencies": {
-    "@types/react": "^19.0.8",
-    "ts-node": "^10.9.2",
-    "tsx": "^4.19.2",
-    "typescript": "^5.7.3"
+    "@types/react": "^19.0.8"
   }
 }
