--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "type": "module",
   "name": "react-observable-hooks",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "index.js",
   "scripts": {
     "start": "tsx index.ts"
@@ -11,7 +11,7 @@
   "license": "ISC",
   "description": "",
   "peerDependencies": {
-    "react": ">= ^17.0.0"
+    "react": ">=17.0.0"
   },
   "devDependencies": {
     "@types/react": "^19.0.8"
