--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "type": "module",
   "name": "react-observable-hooks",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "main": "index.js",
   "scripts": {
-    "start": "tsx index.ts"
+    "start": "tsc index.ts"
   },
   "keywords": [],
   "author": "Ariel Batista <arielbatista_7@hotmail.com>",
@@ -18,6 +18,7 @@
     "react": ">=17.0.0"
   },
   "devDependencies": {
-    "@types/react": "^19.0.8"
+    "@types/react": "^19.0.8",
+    "typescript": "^5.7.3"
   }
 }
